--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Matthew Tse</title>
+<meta name="author" content="Matthew Tse" />
+<meta name="description" content="My Personal Website" />
+<meta name="keywords"  content="Matthew Tse developer software hardware engineer" />
+<meta name="Resource-type" content="Document" />
+<meta name="viewport" content="initial-scale=1, maximum-scale=1">
+<!--favicon-->
+<link rel="icon" type="image/png" href="assets/img/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="assets/img/android-chrome-192x192.png" sizes="192x192">
+<link rel="icon" type="image/png" href="assets/img/favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="assets/img/favicon-16x16.png" sizes="16x16">
+<!--favicon end-->
+<link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
+<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css" />
+<link href='http://fonts.googleapis.com/css?family=Raleway:200,400,800' rel='stylesheet' type='text/css'>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
 </head>
 <body>
-  EMPTY
+  EMPTY wot
 </body>
 </html>
