--- a/index.html
+++ b/index.html
@@ -15,13 +15,44 @@
   <link rel="icon" type="image/png" href="assets/img/favicon-16x16.png" sizes="16x16">
   <!--favicon end-->
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
-  <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css" />
+  <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" />
   <link href='http://fonts.googleapis.com/css?family=Raleway:200,400,800' rel='stylesheet' type='text/css'>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
 </head>
 <body>
-  <h1>Matthew Tse</h1>
+  <div class='blurImg'>
+    <div style="background-image: url('https://d262ilb51hltx0.cloudfront.net/fit/c/1600/1280/gradv/29/81/60/darken/25/1*4ncz3hLxmL8E_bUh-0z62w.jpeg')"></div>
+    <div class='blur' style="background-image: url('https://d262ilb51hltx0.cloudfront.net/fit/c/1600/1280/gradv/29/81/40/darken/50/blur/50/1*4ncz3hLxmL8E_bUh-0z62w.jpeg')"></div>
+  </div>
+  <header>
+    <div>
+      <h1>
+        Medium
+      </h1>
+      <p>
+        Everyone’s stories and ideas
+      </p>
+      <a href='https://medium.com/' title='Medium'>Learn more</a>
+    </div>
+    <nav role='navigation'>
+      <ul>
+        <li>
+          <a class='active' href='#'>Reading List</a>
+        </li>
+        <li>
+          <a href='#'>Bookmarks</a>
+        </li>
+        <li>
+          <a href='#'>Top 100</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <div class='container'>
+    <div></div>
+  </div>
+<script src=assets/javascript/main.js></script>
 </body>
 </html>
