added instaclick and nacbar

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   <header>
     <div>
       <h1>
-        Medium
+        Matthew Tse
       </h1>
       <p>
-        Everyone’s stories and ideas
+        Software Developer
       </p>
       <a href='https://medium.com/' title='Medium'>Learn more</a>
     </div>
@@ -53,6 +53,9 @@
   <div class='container'>
     <div></div>
   </div>
-<script src=assets/javascript/main.js></script>
+<script src="assets/javascript/main.js"></script>
+<script src="assets/javascript/navbar.js"></script>
+<script src="assets/javascript/instaclick.js" data-no-instant></script>
+<script data-no-instant>InstantClick.init();</script>
 </body>
 </html>
