--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" />
   <link href='http://fonts.googleapis.com/css?family=Raleway:200,400,800' rel='stylesheet' type='text/css'>
-
+  <link href="https://s3-us-west-2.amazonaws.com/pesticide/1.2.0/pesticide.min.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
 </head>
