--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
 
 </head>
 <body>
-  <div class='blurImg'>
-    <div class="header-background"></div>
-    <div class="blur bg-blue"></div>
-     <!-- url('https://d262ilb51hltx0.cloudfront.net/fit/c/1600/1280/gradv/29/81/40/darken/50/blur/50/1*4ncz3hLxmL8E_bUh-0z62w.jpeg')"></div> -->
+  <div class=>
+    <div class='blurImg'>
+      <div class="header-background"></div>
+      <div class="blur bg-blue"></div>
+       <!-- url('https://d262ilb51hltx0.cloudfront.net/fit/c/1600/1280/gradv/29/81/40/darken/50/blur/50/1*4ncz3hLxmL8E_bUh-0z62w.jpeg')"></div> -->
+    </div>
   </div>
+
   <header>
     <div >
       <h1>
