migratedeverything into main.sass

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 </head>
 <body>
-  <div class=>
+  <div class='auto-height'>
     <div class='blurImg'>
       <div class="header-background"></div>
       <div class="blur bg-blue"></div>
