--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
       <p>
         My name is Matthew Tse and I am a Software Developer.
       </p>
+      <div class='menu'>
+        <span class="text-middle">About</span>
+        <span class="big-slash">/</span>
+        <span class="text-middle">Portfolio</span>
+        <span class="big-slash">/</span>
+        <span class="text-middle">Contact</span>
+      </div>
     </div>
 
   </header>
