added colors schemes

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
   <!--favicon end-->
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" />
-  <link href='http://fonts.googleapis.com/css?family=Raleway:200,400,800' rel='stylesheet' type='text/css'>
+  <link href="http://fonts.googleapis.com/css?family=Raleway:200,400,800" rel="stylesheet" type="text/css">
   <link href="https://s3-us-west-2.amazonaws.com/pesticide/1.2.0/pesticide.min.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
 </head>
 <body>
-  <div class='auto-height'>
-    <div class='blurImg'>
-      <div class="header-background"></div>
-      <div class="blur bg-blue"></div>
-       <!-- url('https://d262ilb51hltx0.cloudfront.net/fit/c/1600/1280/gradv/29/81/40/darken/50/blur/50/1*4ncz3hLxmL8E_bUh-0z62w.jpeg')"></div> -->
+  <div class="auto-height">
+    <div class="blurImg">
+      <div class="header-bg"></div>
+      <div class="blur bg-gray"></div>
+       <!-- url("https://d262ilb51hltx0.cloudfront.net/fit/c/1600/1280/gradv/29/81/40/darken/50/blur/50/1*4ncz3hLxmL8E_bUh-0z62w.jpeg")"></div> -->
     </div>
   </div>
 
@@ -38,7 +38,7 @@
       <p>
         My name is Matthew Tse and I am a Software Developer.
       </p>
-      <div class='menu'>
+      <div class="menu">
         <span class="text-middle">About</span>
         <span class="big-slash">/</span>
         <span class="text-middle">Portfolio</span>
@@ -48,8 +48,8 @@
     </div>
 
   </header>
-  <div class='container'>
-    <div></div>
+  <div class="container">
+    <div class="bg-navy"></div>
   </div>
 <script src="assets/javascript/main.js"></script>
 <script src="assets/javascript/navbar.js"></script>
