--- a/index.html
+++ b/index.html
@@ -38,16 +38,17 @@
       <p>
         My name is Matthew Tse and I am a Software Developer.
       </p>
-      <div class="menu">
-        <span class="text-middle">About</span>
-        <span class="big-slash">/</span>
-        <span class="text-middle">Portfolio</span>
-        <span class="big-slash">/</span>
-        <span class="text-middle">Contact</span>
-      </div>
+
     </div>
 
   </header>
+  <div class="main-nav">
+    <span class="text-middle">About</span>
+    <span class="big-slash">/</span>
+    <span class="text-middle">Portfolio</span>
+    <span class="big-slash">/</span>
+    <span class="text-middle">Contact</span>
+  </div>
   <div class="container">
     <div class="bg-navy"></div>
   </div>
