positioning of header and nav

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
   </header>
   <div class="main-nav">
-    <span class="text-middle">About</span>
+    <a>About</a>
     <span class="big-slash">/</span>
-    <span class="text-middle">Portfolio</span>
+    <a>Portfolio</a>
     <span class="big-slash">/</span>
-    <span class="text-middle">Contact</span>
+    <a>Contact</a>
   </div>
   <div class="container">
     <div class="bg-navy"></div>
