cascading nav and parallax

--- a/index.html
+++ b/index.html
@@ -14,24 +14,87 @@
   <link rel="icon" type="image/png" href="assets/img/favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/png" href="assets/img/favicon-16x16.png" sizes="16x16">
   <!--favicon end-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/stylesheets/pesticide.css">
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" />
   <link href="http://fonts.googleapis.com/css?family=Raleway:200,400,800" rel="stylesheet" type="text/css">
   <link href="https://s3-us-west-2.amazonaws.com/pesticide/1.2.0/pesticide.min.css">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <!-- Latest compiled and minified CSS -->
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 </head>
 <body>
-  <div class="auto-height">
-    <div class="blurImg">
-      <div class="header-bg"></div>
-      <div class="blur bg-gray"></div>
-       <!-- url("https://d262ilb51hltx0.cloudfront.net/fit/c/1600/1280/gradv/29/81/40/darken/50/blur/50/1*4ncz3hLxmL8E_bUh-0z62w.jpeg")"></div> -->
+
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <div class="small-logo-container">
+          <a class="small-logo" href="#">↥Small Logo</a>
+        </div>
+      </div>
+      <div class="navbar-collapse collapse">
+
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="#">Active</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+        </ul>
+      </div><!--/.nav-collapse -->
     </div>
   </div>
-
-  <header>
-    <div >
+  <div class="container-fluid big-logo-row">
+     <div class="container">
+       <div class="row">
+         <div class="col-xs-12 big-logo-container">
+           <h1 class="big-logo">↧Big Logo</h1>
+         </div><!--/.col-xs-12 -->
+       </div><!--/.row -->
+     </div><!--/.container -->
+   </div><!--/.container-fluid -->
+  <!-- <div class="main-nav">
+    <a>About</a>
+    <span class="big-slash">/</span>
+    <a>Portfolio</a>
+    <span class="big-slash">/</span>
+    <a>Contact</a>
+  </div> -->
+  <section id="intro" class=".big-logo-row" data-speed="6" data-type="background">
+    <div class="container-fluid">
+      <div class="title">
+        <h1>Sectino1!</h1>
+      </div>
+    </div>
+  </section>
+  <section id="home" data-speed="4" data-type="background">
+    <div class="container">
+      <div class="title">
+        <h1>Section2!</h1>
+      </div>
+    </div>
+  </section>
+  <section id="about" data-speed="2" data-type="background">
+    <div class="container">
+      <div class="title">
+        <h1>Section3!</h1>
+      </div>
+    <!-- <div class="blurImg"> -->
+      <!-- <div class="header-bg"></div> -->
+      <!-- <div class="blur bg-gray"></div> -->
+       <!-- url("https://d262ilb51hltx0.cloudfront.net/fit/c/1600/1280/gradv/29/81/40/darken/50/blur/50/1*4ncz3hLxmL8E_bUh-0z62w.jpeg")"></div> -->
+    </div>
+  </section>
+  <!-- <header>
+    <div>
       <h1>
         HI THERE!
       </h1>
@@ -41,14 +104,8 @@
 
     </div>
 
-  </header>
-  <div class="main-nav">
-    <a>About</a>
-    <span class="big-slash">/</span>
-    <a>Portfolio</a>
-    <span class="big-slash">/</span>
-    <a>Contact</a>
-  </div>
+  </header> -->
+
   <div class="container">
     <div class="bg-navy"></div>
   </div>
