--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="icon" type="image/png" href="assets/img/favicon-16x16.png" sizes="16x16">
   <!--favicon end-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/stylesheets/pesticide.css">
+  <!-- <link rel="stylesheet" href="assets/stylesheets/pesticide.css"> -->
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" />
   <link href="http://fonts.googleapis.com/css?family=Raleway:200,400,800" rel="stylesheet" type="text/css">
@@ -38,7 +38,7 @@
           <span class="icon-bar"></span>
         </button>
         <div class="small-logo-container">
-          <a class="small-logo" href="#">↥Small Logo</a>
+          <a class="small-logo" href="#">Matthew Tse</a>
         </div>
       </div>
       <div class="navbar-collapse collapse">
@@ -56,7 +56,7 @@
      <div class="container">
        <div class="row">
          <div class="col-xs-12 big-logo-container">
-           <h1 class="big-logo">↧Big Logo</h1>
+           <h1 class="big-logo">Hi, I'm Matt.</h1>
          </div><!--/.col-xs-12 -->
        </div><!--/.row -->
      </div><!--/.container -->
@@ -68,22 +68,22 @@
     <span class="big-slash">/</span>
     <a>Contact</a>
   </div> -->
-  <section id="intro" class=".big-logo-row" data-speed="6" data-type="background">
+  <!-- <section id="about" data-speed="6" data-type="background">
     <div class="container-fluid">
       <div class="title">
         <h1>Sectino1!</h1>
       </div>
     </div>
-  </section>
-  <section id="home" data-speed="4" data-type="background">
-    <div class="container">
+  </section> -->
+  <section id="portfolio" data-speed="3" data-type="background">
+    <div class="container-fluid">
       <div class="title">
         <h1>Section2!</h1>
       </div>
     </div>
   </section>
-  <section id="about" data-speed="2" data-type="background">
-    <div class="container">
+  <section id="contact" data-speed="1" data-type="background">
+    <div class="container-fluid">
       <div class="title">
         <h1>Section3!</h1>
       </div>
