--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 <script src="assets/javascript/main.js"></script>
 <script src="assets/javascript/navbar.js"></script>
 <script src="assets/javascript/instaclick.js" data-no-instant></script>
+<script src="assets/javascript/headroom.js"></script>
 <script data-no-instant>InstantClick.init();</script>
 </body>
 </html>
