--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <!-- <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -49,18 +49,21 @@
           <li><a href="#">Link</a></li>
           <li><a href="#">Link</a></li>
         </ul>
-      </div><!--/.nav-collapse -->
+      </div>
     </div>
-  </div>
-  <div class="container-fluid big-logo-row">
-     <div class="container">
-       <div class="row">
-         <div class="col-xs-12 big-logo-container">
-           <h1 class="big-logo">Hi, I'm Matt.</h1>
-         </div><!--/.col-xs-12 -->
-       </div><!--/.row -->
-     </div><!--/.container -->
-   </div><!--/.container-fluid -->
+  </div> -->
+  <!-- initially -->
+  <header id="header" class="header">
+    <div class="container">
+      <a>About</a>
+      <span class="big-slash">/</span>
+      <a>Portfolio</a>
+      <span class="big-slash">/</span>
+      <a>Contacts</a>
+      <span class="big-slash">/</span>
+    </div>
+  </header>
+
   <!-- <div class="main-nav">
     <a>About</a>
     <span class="big-slash">/</span>
@@ -75,6 +78,13 @@
       </div>
     </div>
   </section> -->
+  <section id="about" data-speed="1" data-type="background">
+    <div class="container-fluid">
+      <div class="title">
+        <h1>Section1!</h1>
+      </div>
+    </div>
+  </section>
   <section id="portfolio" data-speed="3" data-type="background">
     <div class="container-fluid">
       <div class="title">
@@ -87,10 +97,6 @@
       <div class="title">
         <h1>Section3!</h1>
       </div>
-    <!-- <div class="blurImg"> -->
-      <!-- <div class="header-bg"></div> -->
-      <!-- <div class="blur bg-gray"></div> -->
-       <!-- url("https://d262ilb51hltx0.cloudfront.net/fit/c/1600/1280/gradv/29/81/40/darken/50/blur/50/1*4ncz3hLxmL8E_bUh-0z62w.jpeg")"></div> -->
     </div>
   </section>
   <!-- <header>
@@ -109,10 +115,10 @@
   <div class="container">
     <div class="bg-navy"></div>
   </div>
-<script src="assets/javascript/main.js"></script>
-<script src="assets/javascript/navbar.js"></script>
-<script src="assets/javascript/instaclick.js" data-no-instant></script>
 <script src="assets/javascript/headroom.js"></script>
+<script src="assets/javascript/main.js"></script>
+<!-- <script src="assets/javascript/navbar.js"></script> -->
+<script src="assets/javascript/instaclick.js" data-no-instant></script>
 <script data-no-instant>InstantClick.init();</script>
 </body>
 </html>
