--- a/index.html
+++ b/index.html
@@ -28,39 +28,14 @@
 </head>
 <body>
 
-  <!-- <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <div class="small-logo-container">
-          <a class="small-logo" href="#">Matthew Tse</a>
-        </div>
-      </div>
-      <div class="navbar-collapse collapse">
-
-        <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#">Active</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-        </ul>
-      </div>
-    </div>
-  </div> -->
   <!-- initially -->
   <header id="header" class="header">
     <div class="container">
-      <a>About</a>
+      <a>ABOUT</a>
       <span class="big-slash">/</span>
-      <a>Portfolio</a>
+      <a>PORTFOLIO</a>
       <span class="big-slash">/</span>
-      <a>Contacts</a>
-      <span class="big-slash">/</span>
+      <a>CONTACT</a>
     </div>
   </header>
 
@@ -99,9 +74,20 @@
       </div>
     </div>
   </section>
-  <div class="container">
-    <div class="bg-navy"></div>
-  </div>
+  <section id="contact" data-speed="1" data-type="background">
+    <div class="container-fluid">
+      <div class="title">
+        <h1>Section3!</h1>
+      </div>
+    </div>
+  </section>
+  <section id="contact" data-speed="1" data-type="background">
+    <div class="container-fluid">
+      <div class="title">
+        <h1>Section3!</h1>
+      </div>
+    </div>
+  </section>
   <script src="assets/javascript/headroom.js"></script>
   <script src="assets/javascript/main.js"></script>
   <!-- <script src="assets/javascript/navbar.js"></script> -->
