basic layout overhaul, blocks now

--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" />
   <link href="http://fonts.googleapis.com/css?family=Raleway:200,400,800" rel="stylesheet" type="text/css">
-  <link href="https://s3-us-west-2.amazonaws.com/pesticide/1.2.0/pesticide.min.css">
   <!-- Latest compiled and minified CSS -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
 
 </head>
 <body>
@@ -38,53 +37,31 @@
       <a>CONTACT</a>
     </div>
   </header>
-
-  <!-- <div class="main-nav">
-    <a>About</a>
-    <span class="big-slash">/</span>
-    <a>Portfolio</a>
-    <span class="big-slash">/</span>
-    <a>Contact</a>
-  </div> -->
-  <!-- <section id="about" data-speed="6" data-type="background">
+  <section id="intro">
     <div class="container-fluid">
       <div class="title">
-        <h1>Sectino1!</h1>
-      </div>
-    </div>
-  </section> -->
-  <section id="about" data-speed="1" data-type="background">
-    <div class="container-fluid">
-      <div class="title">
-        <h1>Section1!</h1>
+        <h1>Intro</h1>
       </div>
     </div>
   </section>
-  <section id="portfolio" data-speed="3" data-type="background">
+  <section id="about">
     <div class="container-fluid">
       <div class="title">
-        <h1>Section2!</h1>
+        <h1>About</h1>
       </div>
     </div>
   </section>
-  <section id="contact" data-speed="1" data-type="background">
+  <section id="work">
     <div class="container-fluid">
       <div class="title">
-        <h1>Section3!</h1>
+        <h1>Work</h1>
       </div>
     </div>
   </section>
-  <section id="contact" data-speed="1" data-type="background">
+  <section id="contact">
     <div class="container-fluid">
       <div class="title">
-        <h1>Section3!</h1>
-      </div>
-    </div>
-  </section>
-  <section id="contact" data-speed="1" data-type="background">
-    <div class="container-fluid">
-      <div class="title">
-        <h1>Section3!</h1>
+        <h1>Contact</h1>
       </div>
     </div>
   </section>
