--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
   <header id="header" class="header">
     <div class="container">
       <a>ABOUT</a>
-      <span class="big-slash">/</span>
+      <slash>/</slash>
       <a>PORTFOLIO</a>
-      <span class="big-slash">/</span>
+      <slash>/</slash>
       <a>CONTACT</a>
     </div>
   </header>
