--- a/index.html
+++ b/index.html
@@ -14,20 +14,16 @@
   <link rel="icon" type="image/png" href="assets/img/favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/png" href="assets/img/favicon-16x16.png" sizes="16x16">
   <!--favicon end-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <!-- <link rel="stylesheet" href="assets/stylesheets/pesticide.css"> -->
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" />
   <link href="http://fonts.googleapis.com/css?family=Raleway:200,400,800" rel="stylesheet" type="text/css">
   <!-- Latest compiled and minified CSS -->
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> -->
 
 </head>
 <body>
-
-  <!-- initially -->
   <header id="header" class="header">
     <div class="container">
       <a>ABOUT</a>
@@ -37,37 +33,51 @@
       <a>CONTACT</a>
     </div>
   </header>
-  <section id="intro">
-    <div class="container-fluid">
+  <section id="intro" class="container">
+    <div class="intro">
       <div class="title">
         <h1>Intro</h1>
       </div>
     </div>
   </section>
-  <section id="about">
-    <div class="container-fluid">
+  <section id="about" class="container">
+    <div class="about-title">
       <div class="title">
         <h1>About</h1>
       </div>
     </div>
+    <div class="about-content">
+      <div class="title">
+        <h1>About-Content</h1>
+      </div>
+    </div>
   </section>
-  <section id="work">
-    <div class="container-fluid">
+  <section id="work" class="container">
+    <div class="work-title">
       <div class="title">
         <h1>Work</h1>
       </div>
     </div>
+    <div class="work-content">
+      <div class="title">
+        <h1>Work-Content</h1>
+      </div>
+    </div>
   </section>
-  <section id="contact">
-    <div class="container-fluid">
+  <section id="contact" class="container">
+    <div class="contact-title">
       <div class="title">
         <h1>Contact</h1>
+      </div>
+    </div>
+    <div class="contact-content">
+      <div class="title">
+        <h1>Contact-Content</h1>
       </div>
     </div>
   </section>
   <script src="assets/javascript/headroom.js"></script>
   <script src="assets/javascript/main.js"></script>
-  <!-- <script src="assets/javascript/navbar.js"></script> -->
   <script src="assets/javascript/instaclick.js" data-no-instant></script>
   <script data-no-instant>InstantClick.init();</script>
 </body>
