working on split screen

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
       <a>CONTACT</a>
     </div>
   </header>
-  <section id="intro" class="container">
+  <section id="intro" class="section-wrapper">
     <div class="intro">
       <div class="title">
         <h1>Intro</h1>
       </div>
     </div>
   </section>
-  <section id="about" class="container">
+  <section id="about" class="section-wrapper">
     <div class="about-title">
       <div class="title">
         <h1>About</h1>
@@ -52,7 +52,7 @@
       </div>
     </div>
   </section>
-  <section id="work" class="container">
+  <section id="work" class="section-wrapper">
     <div class="work-title">
       <div class="title">
         <h1>Work</h1>
@@ -64,7 +64,7 @@
       </div>
     </div>
   </section>
-  <section id="contact" class="container">
+  <section id="contact" class="section-wrapper">
     <div class="contact-title">
       <div class="title">
         <h1>Contact</h1>
