--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 <body>
   <header id="header" class="header">
     <div class="container">
-      <a>ABOUT</a>
+      <a href="#about">ABOUT</a>
       <slash>/</slash>
-      <a>PORTFOLIO</a>
+      <a href="#work">WORK</a>
       <slash>/</slash>
-      <a>CONTACT</a>
+      <a href="#contact">CONTACT</a>
     </div>
   </header>
   <section id="intro" class="section-wrapper">
@@ -51,6 +51,7 @@
         <h1>About-Content</h1>
       </div>
     </div>
+    <div class="clear"></div>
   </section>
   <section id="work" class="section-wrapper">
     <div class="work-title">
@@ -63,6 +64,7 @@
         <h1>Work-Content</h1>
       </div>
     </div>
+    <div class="clear"></div>
   </section>
   <section id="contact" class="section-wrapper">
     <div class="contact-title">
@@ -75,6 +77,7 @@
         <h1>Contact-Content</h1>
       </div>
     </div>
+    <div class="clear"></div>
   </section>
   <script src="assets/javascript/headroom.js"></script>
   <script src="assets/javascript/main.js"></script>
