title and content class separate

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 </head>
 <body>
-  <header id="header" class="header">
+  <header class="header">
     <div class="container">
       <a href="#about">ABOUT</a>
       <slash>/</slash>
@@ -39,6 +39,7 @@
         <h1>Intro</h1>
       </div>
     </div>
+    <div class="clear"></div>
   </section>
   <section id="about" class="section-wrapper">
     <div class="about-title">
@@ -47,7 +48,7 @@
       </div>
     </div>
     <div class="about-content">
-      <div class="title">
+      <div class="content">
         <h1>About-Content</h1>
       </div>
     </div>
@@ -60,7 +61,7 @@
       </div>
     </div>
     <div class="work-content">
-      <div class="title">
+      <div class="content">
         <h1>Work-Content</h1>
       </div>
     </div>
@@ -73,7 +74,7 @@
       </div>
     </div>
     <div class="contact-content">
-      <div class="title">
+      <div class="content">
         <h1>Contact-Content</h1>
       </div>
     </div>
