--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="icon" type="image/png" href="assets/img/favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/png" href="assets/img/favicon-16x16.png" sizes="16x16">
   <!--favicon end-->
-  <!-- <link rel="stylesheet" href="assets/stylesheets/pesticide.css"> -->
+  <link rel="stylesheet" href="assets/stylesheets/pesticide.css">
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" />
   <link href="http://fonts.googleapis.com/css?family=Raleway:200,400,800" rel="stylesheet" type="text/css">
@@ -34,20 +34,20 @@
     </div>
   </header>
   <section id="intro" class="section-wrapper">
-    <div class="intro">
+    <div class="subsection">
       <div class="title">
-        <h1>Intro</h1>
+        <h1>Hey there! I'm Matthew.</h1>
       </div>
     </div>
     <div class="clear"></div>
   </section>
   <section id="about" class="section-wrapper">
-    <div class="about-title">
+    <div class="subsection-white">
       <div class="title">
         <h1>About</h1>
       </div>
     </div>
-    <div class="about-content">
+    <div class="subsection">
       <div class="content">
         <h1>About-Content</h1>
       </div>
@@ -55,12 +55,12 @@
     <div class="clear"></div>
   </section>
   <section id="work" class="section-wrapper">
-    <div class="work-title">
+    <div class="subsection">
       <div class="title">
         <h1>Work</h1>
       </div>
     </div>
-    <div class="work-content">
+    <div class="subsection-white">
       <div class="content">
         <h1>Work-Content</h1>
       </div>
@@ -68,12 +68,12 @@
     <div class="clear"></div>
   </section>
   <section id="contact" class="section-wrapper">
-    <div class="contact-title">
+    <div class="subsection-white">
       <div class="title">
         <h1>Contact</h1>
       </div>
     </div>
-    <div class="contact-content">
+    <div class="subsection">
       <div class="content">
         <h1>Contact-Content</h1>
       </div>
