smooth scroll nav

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
   <link href="http://fonts.googleapis.com/css?family=Raleway:200,400,800" rel="stylesheet" type="text/css">
   <!-- Latest compiled and minified CSS -->
 
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
 </head>
 <body>
   <header class="header">
     <div class="container">
-      <a href="#about">ABOUT</a>
+      <a id="about-nav">ABOUT</a>
       <slash>/</slash>
-      <a href="#work">WORK</a>
+      <a id="work-nav">WORK</a>
       <slash>/</slash>
-      <a href="#contact">CONTACT</a>
+      <a id="contact-nav">CONTACT</a>
     </div>
   </header>
   <section id="intro" class="section-wrapper">
@@ -48,8 +48,11 @@
       </div>
     </div>
     <div class="subsection">
-      <div class="content">
+      <div class="about">
         <h1>About-Content</h1>
+      </div>
+      <div class="about">
+        <h1>About-Content2</h1>
       </div>
     </div>
     <div class="clear"></div>
