--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <!--favicon end-->
   <link rel="stylesheet" href="assets/stylesheets/pesticide.css">
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
-  <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" /> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link href="http://fonts.googleapis.com/css?family=Raleway:200,400,800" rel="stylesheet" type="text/css">
   <!-- Latest compiled and minified CSS -->
 
@@ -77,8 +78,13 @@
       </div>
     </div>
     <div class="subsection">
-      <div class="content">
-        <h1>Contact-Content</h1>
+      <div class="contact">
+        <div class="icons-list">
+					<a href="https://www.linkedin.com/in/mcotse?trk=nav_responsive_tab_profile" class="fa fa-linkedin-square"></a>
+					<a href="https://github.com/mcotse" class="fa fa-github"></a>
+					<a href="https://www.instagram.com/itsmatthewtyo/" class="fa fa-instagram"></a>
+					<a href="https://www.facebook.com/mcotse" class="fa fa-facebook-square"></a>
+  			</div>
       </div>
     </div>
     <div class="clear"></div>
