opentype font titles

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <link rel="icon" type="image/png" href="assets/img/favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/png" href="assets/img/favicon-16x16.png" sizes="16x16">
   <!--favicon end-->
-  <link rel="stylesheet" href="assets/stylesheets/pesticide.css">
+  <!-- <link rel="stylesheet" href="assets/stylesheets/pesticide.css"> -->
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
   <!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" /> -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-  <link href="http://fonts.googleapis.com/css?family=Raleway:200,400,800" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=$font:200,400,800" rel="stylesheet" type="text/css">
   <!-- Latest compiled and minified CSS -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
@@ -37,18 +37,22 @@
   <section id="intro" class="section-wrapper">
     <div class="subsection">
       <div class="title">
-        <h1>Hey there! I'm Matthew.</h1>
+        <h1>Hey there! My name is Matthew.</h1>
       </div>
     </div>
     <div class="clear"></div>
   </section>
   <section id="about" class="section-wrapper">
-    <div class="subsection-white">
+    <div class="subsection">
       <div class="title">
-        <h1>About</h1>
+        <span class="letter orange" data-letter="A">A</span>
+        <span class="letter orange" data-letter="B">B</span>
+        <span class="letter orange" data-letter="O">O</span>
+        <span class="letter orange" data-letter="U">U</span>
+        <span class="letter orange" data-letter="T">T</span>
       </div>
     </div>
-    <div class="subsection">
+    <div class="subsection-white">
       <div class="about">
         <h1>About-Content</h1>
       </div>
@@ -59,12 +63,15 @@
     <div class="clear"></div>
   </section>
   <section id="work" class="section-wrapper">
-    <div class="subsection">
+    <div class="subsection-white">
       <div class="title">
-        <h1>Work</h1>
+        <span class="letter grey" data-letter="W">W</span>
+        <span class="letter grey" data-letter="O">O</span>
+        <span class="letter grey" data-letter="R">R</span>
+        <span class="letter grey" data-letter="K">K</span>
       </div>
     </div>
-    <div class="subsection-white">
+    <div class="subsection">
       <div class="content">
         <h1>Work-Content</h1>
       </div>
@@ -72,12 +79,18 @@
     <div class="clear"></div>
   </section>
   <section id="contact" class="section-wrapper">
-    <div class="subsection-white">
+    <div class="subsection">
       <div class="title">
-        <h1>Contact</h1>
+        <span class="letter blue" data-letter="C">C</span>
+        <span class="letter blue" data-letter="O">O</span>
+        <span class="letter blue" data-letter="N">N</span>
+        <span class="letter blue" data-letter="T">T</span>
+        <span class="letter blue" data-letter="A">A</span>
+        <span class="letter blue" data-letter="C">C</span>
+        <span class="letter blue" data-letter="T">T</span>
       </div>
     </div>
-    <div class="subsection">
+    <div class="subsection-white">
       <div class="contact">
         <div class="icons-list">
 					<a href="https://www.linkedin.com/in/mcotse?trk=nav_responsive_tab_profile" class="fa fa-linkedin-square"></a>
