coloring of title text

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
   <section id="about" class="section-wrapper">
     <div class="subsection">
       <div class="title">
-        <span class="letter orange" data-letter="A">A</span>
-        <span class="letter orange" data-letter="B">B</span>
-        <span class="letter orange" data-letter="O">O</span>
-        <span class="letter orange" data-letter="U">U</span>
-        <span class="letter orange" data-letter="T">T</span>
+        <span class="letter grey" data-letter="A">A</span>
+        <span class="letter grey" data-letter="B">B</span>
+        <span class="letter grey" data-letter="O">O</span>
+        <span class="letter grey" data-letter="U">U</span>
+        <span class="letter grey" data-letter="T">T</span>
       </div>
     </div>
     <div class="subsection-white">
@@ -65,10 +65,10 @@
   <section id="work" class="section-wrapper">
     <div class="subsection-white">
       <div class="title">
-        <span class="letter grey" data-letter="W">W</span>
-        <span class="letter grey" data-letter="O">O</span>
-        <span class="letter grey" data-letter="R">R</span>
-        <span class="letter grey" data-letter="K">K</span>
+        <span class="letter--black blue" data-letter="W">W</span>
+        <span class="letter--black blue" data-letter="O">O</span>
+        <span class="letter--black blue" data-letter="R">R</span>
+        <span class="letter--black blue" data-letter="K">K</span>
       </div>
     </div>
     <div class="subsection">
@@ -81,13 +81,13 @@
   <section id="contact" class="section-wrapper">
     <div class="subsection">
       <div class="title">
-        <span class="letter blue" data-letter="C">C</span>
-        <span class="letter blue" data-letter="O">O</span>
-        <span class="letter blue" data-letter="N">N</span>
-        <span class="letter blue" data-letter="T">T</span>
-        <span class="letter blue" data-letter="A">A</span>
-        <span class="letter blue" data-letter="C">C</span>
-        <span class="letter blue" data-letter="T">T</span>
+        <span class="letter orange" data-letter="C">C</span>
+        <span class="letter orange" data-letter="O">O</span>
+        <span class="letter orange" data-letter="N">N</span>
+        <span class="letter orange" data-letter="T">T</span>
+        <span class="letter orange" data-letter="A">A</span>
+        <span class="letter orange" data-letter="C">C</span>
+        <span class="letter orange" data-letter="T">T</span>
       </div>
     </div>
     <div class="subsection-white">
