contact msg and social media icons

--- a/index.html
+++ b/index.html
@@ -92,11 +92,32 @@
     </div>
     <div class="subsection-white">
       <div class="contact">
+        <div class="text">
+          If you want to find out more about me, feel free to check these out! ...or check them all out, if "data-mining" is your thing...
+        </div>
         <div class="icons-list">
-					<a href="https://www.linkedin.com/in/mcotse?trk=nav_responsive_tab_profile" class="fa fa-linkedin-square"></a>
-					<a href="https://github.com/mcotse" class="fa fa-github"></a>
-					<a href="https://www.instagram.com/itsmatthewtyo/" class="fa fa-instagram"></a>
-					<a href="https://www.facebook.com/mcotse" class="fa fa-facebook-square"></a>
+          <ul class='social'>
+            <li class='linkedin'>
+              <a href="https://www.linkedin.com/in/mcotse?trk=nav_responsive_tab_profile">
+                <i class='fa fa-lg fa-linkedin'></i>
+              </a>
+            </li>
+            <li class='github'>
+              <a href="https://github.com/mcotse">
+                <i class='fa fa-lg fa-github'></i>
+              </a>
+            </li>
+            <li class='instagram'>
+              <a href="https://www.instagram.com/itsmatthewtyo/">
+                <i class='fa fa-lg fa-instagram'></i>
+              </a>
+            </li>
+            <li class='facebook'>
+              <a href="https://www.facebook.com/mcotse">
+                <i class='fa fa-lg fa-facebook-official'></i>
+              </a>
+            </li>
+          </ul>
   			</div>
       </div>
     </div>
