--- a/index.html
+++ b/index.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Matthew Tse</title>
-  <meta name="author" content="Matthew Tse" />
-  <meta name="description" content="My Personal Website" />
-  <meta name="keywords"  content="Matthew Tse developer software hardware engineer" />
-  <meta name="Resource-type" content="Document" />
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+  <!-- General Meta -->
+  <meta charset="utf-8">
+  <meta name="language" content="english">
+  <meta http-equiv="content-type" content="text/html">
+  <meta name="author" content=”Matthew Tse”>
+  <meta name="designer" content=”Matthew Tse”>
+  <meta name="publisher" content=”Matthew Tse”>
+  <meta name="no-email-collection" content="http://www.unspam.com/noemailcollection/">
+
+  <!--Search Engine Optimization Meta Tags-->
+  <title>Matthew Tse - Official Website. </title>
+  <meta name="description" content="Learn more about Matthew Tse, his projects, interests and experience.">
+  <meta name="keywords" content="Software Engineer,Product Manager,Project Manager,Project Manager,Computer Scientist, Programmer, Designer, University of Waterloo">
+  <meta name=”robots” content=”index,follow”>
+  <meta name="revisit-after" content="7 days">
+  <meta name="distribution" content="web">
+  <meta http-equiv="refresh" content="30">
+  <meta name=”robots” content=”noodp”>
+
+  <!--Optional Meta Tags-->
+  <meta name="distribution" content="web">
+  <meta name="web_author" content="Rafayel Mkrtchyan">
+  <meta name="rating" content="general">
+  <meta name="rating" content="safe for kids">
+  <meta name="subject" content="Personal">
+  <meta name="title" content="Rafayel Mkrtchyan - Official Website.">
+  <meta name="copyright" content="Copyright 2016">
+  <meta name="reply-to" content="mcotse@uwaterloo.ca">
+  <meta name="abstract" content="Matthew Tse is an IT strategist, with over 3 years of experience, including software engineering, project management, product development, business operations, and strategy.">
+  <meta name=”city” content=”Toronto”>
+  <meta name=”country” content=”Canada”>
+  <meta name="distribution" content="global">
+  <meta name="classification" content="Matthew Tse is an IT strategist, with over 3 years of experience, including software engineering, project management, product development, business operations, and strategy.">
+
+  <!--Meta Tags for HTML pages on Mobile-->
+  <meta name="format-detection" content="telephone=yes"/>
+  <meta name="HandheldFriendly" content="true"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+  <!--http-equiv Tags-->
+  <meta http-equiv="Content-Style-Type" content="text/css">
+  <meta http-equiv="Content-Script-Type" content="text/javascript">
   <!--favicon-->
   <link rel="icon" type="image/png" href="assets/img/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="assets/img/android-chrome-192x192.png" sizes="192x192">
