--- a/index.html
+++ b/index.html
@@ -88,11 +88,8 @@
       </div>
     </div>
     <div class="subsection-white">
-      <div class="about">
+      <div class="content">
         <h1>About-Content</h1>
-      </div>
-      <div class="about">
-        <h1>About-Content2</h1>
       </div>
     </div>
     <div class="clear"></div>
