--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
       </div>
     </div>
     <div class="subsection-white">
-      <div class="content">
-        <h1>About-Content</h1>
+      <div class="content about">
+        <p>
+          I am passionate about tech, food and badminton. I love to learn, eat and play. I am good at coding, creating and connecting. My name is Matthew, welcome to my world.
+        </p>
       </div>
     </div>
     <div class="clear"></div>
