about content and font sizing clean up

--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
   <!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" /> -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-  <link href="http://fonts.googleapis.com/css?family=$font:200,400,800" rel="stylesheet" type="text/css">
   <!-- Latest compiled and minified CSS -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
@@ -88,10 +87,17 @@
       </div>
     </div>
     <div class="subsection-white">
-      <div class="content about">
-        <p>
-          I am passionate about tech, food and badminton. I love to learn, eat and play. I am good at coding, creating and connecting. My name is Matthew, welcome to my world.
-        </p>
+      <div class="about">
+        <div class="text">
+          <p>
+            Ayyy hello! Looks like someone stumble upon my crumb trail! <br />
+            Welcome to my personal site - a window I've built to show my <a href="#work">work</a>, my <a href="https://www.linkedin.com/in/mcotse">achievements</a> and my <a href="https://www.youtube.com/watch?v=ARrr4cOuzj0">creative</a> self. I hope you enjoy the tour and get to learn a little more about me in the process. <br /><br />
+            First thing about me myself and I:<br />
+            I am passionate about tech, food and badminton. <br />
+            I love to learn, eat and play. <br />
+            I enjoy solving problems, coming up with creative solutions and connecting with like-minded people. <br />
+          </p>
+        </div>
       </div>
     </div>
     <div class="clear"></div>
@@ -127,7 +133,7 @@
     <div class="subsection-white">
       <div class="contact">
         <div class="text">
-          If you want to find out more about me, feel free to check these out! ...or check them all out, if "data-mining" is your thing...
+          If you want to find out more about me, feel free to follow one of these links! ...or check them all out, if "data-mining" is your thing...
         </div>
         <div class="icons-list">
           <ul class='social'>
