--- a/index.html
+++ b/index.html
@@ -90,9 +90,15 @@
       <div class="about">
         <div class="text">
           <p>
+            <div class="subtitle">
+              <strong>WELCOME</strong>
+            </div>
             Ayyy hello! Looks like someone stumble upon my crumb trail! <br />
-            Welcome to my personal site - a window I've built to show my <a href="#work">work</a>, my <a href="https://www.linkedin.com/in/mcotse">achievements</a> and my <a href="https://www.youtube.com/watch?v=ARrr4cOuzj0">creative</a> self. I hope you enjoy the tour and get to learn a little more about me in the process. <br /><br />
-            First thing about me myself and I:<br />
+            Welcome to my personal site - a window I've built to showcase my <a href="#work">work</a>, my <a href="https://www.youtube.com/watch?v=ARrr4cOuzj0">creative</a> skills and who I am. I hope you enjoy the tour and get to learn a little more about me in the process. <br /><br />
+            <div class="subtitle">
+              <strong>WHO I AM</strong>
+            </div>
+            I'm a computer engineering student at the Universtiy of Waterloo.
             I am passionate about tech, food and badminton. <br />
             I love to learn, eat and play. <br />
             I enjoy solving problems, coming up with creative solutions and connecting with like-minded people. <br />
