font sizes and margins

--- a/index.html
+++ b/index.html
@@ -91,17 +91,15 @@
         <div class="text">
           <p>
             <div class="subtitle">
-              <strong>WELCOME</strong>
+              WELCOME
             </div>
             Ayyy hello! Looks like someone stumble upon my crumb trail! <br />
-            Welcome to my personal site - a window I've built to showcase my <a href="#work">work</a>, my <a href="https://www.youtube.com/watch?v=ARrr4cOuzj0">creative</a> skills and who I am. I hope you enjoy the tour and get to learn a little more about me in the process. <br /><br />
+            Welcome to my personal site - a window I've built to showcase my work, my skills and who I am. Go ahead and check it out, I hope you enjoy the tour and get to learn a little more about me in the process. <br /><br />
             <div class="subtitle">
-              <strong>WHO I AM</strong>
+              WHO I AM
             </div>
-            I'm a computer engineering student at the Universtiy of Waterloo.
-            I am passionate about tech, food and badminton. <br />
-            I love to learn, eat and play. <br />
-            I enjoy solving problems, coming up with creative solutions and connecting with like-minded people. <br />
+            <strong>I'm a computer engineering student at the Universtiy of Waterloo who loves exciting tech, delicious food and badminton. </strong><br />
+            I enjoy solving problems, coming up with <a href="https://www.youtube.com/watch?v=ARrr4cOuzj0">strategic</a> and creative solutions to <br />
           </p>
         </div>
       </div>
@@ -138,8 +136,11 @@
     </div>
     <div class="subsection-white">
       <div class="contact">
+        <div class="subtitle">
+          FIND ME
+        </div>
         <div class="text">
-          If you want to find out more about me, feel free to follow one of these links! ...or check them all out, if "data-mining" is your thing...
+          If you want to find out more about me, feel free to follow one of these links! ...or check them all out, if data-mining is your thing...
         </div>
         <div class="icons-list">
           <ul class='social'>
