working on fixed section header(left)

--- a/index.html
+++ b/index.html
@@ -102,6 +102,29 @@
             I enjoy solving problems, coming up with <a href="https://www.youtube.com/watch?v=ARrr4cOuzj0">strategic</a> and creative solutions to <br />
           </p>
         </div>
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
+        <br />test
       </div>
     </div>
     <div class="clear"></div>
