--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
   </header>
   <section id="intro" class="section-wrapper">
-    <div class="subsection">
+    <div class="subsection intro">
       <div class="title">
         <h1>Hey there! My name is Matthew.</h1>
       </div>
@@ -77,7 +77,7 @@
     <div class="clear"></div>
   </section>
   <section id="about" class="section-wrapper">
-    <div class="subsection">
+    <div class="subsection-blue">
       <div class="title">
         <span class="letter grey" data-letter="A">A</span>
         <span class="letter grey" data-letter="B">B</span>
@@ -102,31 +102,6 @@
             I enjoy solving problems, coming up with <a href="https://www.youtube.com/watch?v=ARrr4cOuzj0">strategic</a> and creative solutions to <br />
           </p>
         </div>
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />test
-        <br />end
       </div>
     </div>
     <div class="clear"></div>
@@ -140,7 +115,7 @@
         <span class="letter--black blue" data-letter="K">K</span>
       </div>
     </div>
-    <div class="subsection">
+    <div class="subsection-orange">
       <div class="content">
         <h1>Work-Content</h1>
       </div>
@@ -148,7 +123,7 @@
     <div class="clear"></div>
   </section>
   <section id="contact" class="section-wrapper">
-    <div class="subsection">
+    <div class="subsection-grey">
       <div class="title">
         <span class="letter orange" data-letter="C">C</span>
         <span class="letter orange" data-letter="O">O</span>
