--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <section id="intro" class="section-wrapper">
     <div class="subsection intro">
       <div class="title">
-        <h1>Hey there! My name is Matthew.</h1>
+        <h1>Matthew Tse</h1>
       </div>
     </div>
     <div class="clear"></div>
