Add Typer.js dependency and subtitle to intro

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
   <!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" /> -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <!-- Latest compiled and minified CSS -->
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+<!--
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> -->
 
 </head>
 <body>
-  <header class="header">
+  <!-- <header class="header">
     <div class="container">
       <a id="about-nav">ABOUT</a>
       <slash>/</slash>
@@ -67,11 +67,36 @@
       <slash>/</slash>
       <a id="contact-nav">CONTACT</a>
     </div>
-  </header>
+  </header> -->
   <section id="intro" class="section-wrapper">
     <div class="subsection intro">
       <div class="title">
-        <h1>Matthew Tse</h1>
+        <!-- <h1>Matthew Tse</h1> -->
+        <span class="letter--black blue" data-letter="M">M</span>
+        <span class="letter--black blue" data-letter="A">A</span>
+        <span class="letter--black blue" data-letter="T">T</span>
+        <span class="letter--black blue" data-letter="T">T</span>
+        <span class="letter--black blue" data-letter="H">H</span>
+        <span class="letter--black blue" data-letter="E">E</span>
+        <span class="letter--black blue" data-letter="W">W</span>
+        <span class="letter--black blue" data-letter="T">T</span>
+        <span class="letter--black blue" data-letter="S">S</span>
+        <span class="letter--black blue" data-letter="E">E</span>
+        <p class="typer" data-typer-targets='{"targets":[
+        "web design · front-end development",
+        "ux design · front-end development",
+        "responsive design · front-end development",
+        "responsive design · mobile development",
+        "interactive design · mobile development",
+        "interactive design · chat-bot development",
+        "responsive design · chat-bot development",
+        "responsive design · object-oriented development",
+        "creative design · object-oriented development",
+        "scalable design · object-oriented development",
+        "scalable design · back-end development",
+        "web design · back-end development"
+        ]}'></p>
+
       </div>
     </div>
     <div class="clear"></div>
@@ -170,6 +195,9 @@
     </div>
     <div class="clear"></div>
   </section>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/jquery.typeit/4.2.3/typeit.min.js"></script>
+  <script src="assets/javascript/typer.js"></script>
   <script src="assets/javascript/headroom.js"></script>
   <script src="assets/javascript/main.js"></script>
   <script src="assets/javascript/instaclick.js" data-no-instant></script>
